HMAN-993: Remove duplicate tests
- Removed DeleteHearingGroup nested class from LinkedHearingGroupServiceTest class.  The nested class was a copy of the nested class of the same name present in the LinkHearingGroupServiceTest.
- Removed all unused imports, constants and methods from LinkedHearingGroupServiceTest class.
- Added some minor code improvements to LinkHearingGroupServiceTest class that were present in tests removed from LinkedHearingGroupServiceTest class.